# noogle

./: .gitattributes  .gitignore  .mergify.yml  404.html  CNAME  Cargo.toml  LICENSE  README.md  devShell.nix  flake.nix  index.html  next.config.js  package-lock.json  package.json  preCommit.nix  projects.toml  renovate.json  treefmt.toml  tsconfig.json  vision.md
.github/: dependabot.yml  renovate.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  main.yml  publish.yml  test.yaml  update-nix.yml  update-nixpkgs.yml  update.yml
codemod/: .envrc  Cargo.toml  README.md  flake-module.nix  prefixes.json
codemod/src/: main.rs  tests.rs
codemod/test/: args.nix  mixed.nix
codemod/test/nested/: sample.nix
codemod/test_data/: mixed.expect  mixed.nix  simple.nix
codemod/test_data/args/: default.nix
components/NixFunctions/: index.ts  nixFunctions.tsx
components/basicList/: basicList.spec.tsx  basicList.tsx
components/codeHighlight/: codeHighlight.tsx  index.ts
components/emptyRecordsPlaceholder/: index.tsx
components/functionItem/: functionItem.tsx
components/functionOfTheDay/: functionOfTheDay.tsx  index.ts
components/layout/: index.ts  layout.tsx
components/pageContext/: pageContext.tsx
components/preview/: preview.module.css  preview.tsx
components/searchInput/: index.tsx  searchInput.spec.tsx  searchInput.tsx
crates/pesto/: ARCHITECTURE.md  Cargo.toml  README.md  flake-module.nix
crates/pesto/src/: alias.rs  bulk.rs  comment.rs  main.rs  pasta.rs  position.rs
crates/pesto/test_data/aliases/: add.json  escapeURL.expect  fold.json  pipe.expect  pipe.json  traceVal.json
crates/pesto/test_data/assets/: asserts.nix  attrsets.nix  cli.nix  debug.nix  default.nix  derivations.nix  fixed-points.nix  gvariant.nix  kernel.nix  licenses.nix  meta.nix  modules.nix  options.nix  sources.nix  strings-with-deps.nix  strings.nix  types.nix  versions.nix  zip-int-bits.nix
crates/pesto/test_data/assets/fileset/: default.nix
crates/pesto/test_data/assets/path/: default.nix
crates/pesto/test_data/atom/: inherit.nix  partially_applied_1_lambda.expect  partially_applied_2_lambda.pos  trivial_lambda.nix
crates/pesto/test_data/inheritance/: concatStrings.expect  concatStrings.json  foldl.expect  foldl.json
crates/pesto/test_data/types/: basic.md  many.md  nested.expect  nested.md
examples/: .envrc  .gitignore  flake-module.nix  noogle_get_examples.py
indexer/: .gitignore  .travis.yml  Cargo.toml  flake-module.nix  makeMarkdown.js
indexer/src/: main.rs
indexer/test/: options.nix  types.nix
models/: builtins.json  data.ts  internals.ts  lib.json  nix.ts  trivial-builders.json
nixPlugin/: .gitignore  CMakeLists.txt  flake-module.nix  package.nix  plugin.cc
pages/: _app.tsx  index.tsx  preview.tsx
pasta/: .envrc  README.md  default.nix  flake-module.nix  shell.nix
pesto/: .envrc  Cargo.toml  README.md  flake-module.nix  json.json  out.json
pesto/fixtures/: pos.json  test.nix
pesto/src/: alias.rs  bulk.rs  comment.rs  main.rs  markdown.rs  pasta.rs  position.rs  tests.rs
pesto/test_data/aliases/: add.expect  add.json  escapeURL.json  fold.expect  fold.json  foldl.expect  foldl.json  strings.expect  traceVal.expect  traceVal.json
pesto/test_data/assets/: customisation.nix  deprecated.nix  filesystem.nix  generators.nix  lists.nix  strings-with-deps.nix  trivial.nix
pesto/test_data/assets/fileset/: internal.nix
pesto/test_data/assets/systems/: default.nix  platforms.nix
pesto/test_data/assets/tests/: misc.nix  systems.nix
pesto/test_data/atom/: functor.expect  functor.nix  functor.pos  inherit.expect  inherit.nix  inherit.pos  partially_applied_1_lambda.expect  partially_applied_1_lambda.nix  partially_applied_1_lambda.pos  partially_applied_2_lambda.expect  partially_applied_2_lambda.nix  trivial_lambda.expect  trivial_lambda.nix  trivial_lambda.pos
pesto/test_data/bulk/: attr.expect  attr.json  data.expect  pasta.expect  pasta.json
pesto/test_data/content_format/: add.expect  foldl'.expect  foldl'.json
pesto/test_data/frontmatter/: absolute.md  import.file  relative1.expect  relative1.md  relative2.md
pesto/test_data/inheritance/: add.expect  catAttrs.expect  catAttrs.json  concatStrings.expect  foldl.expect  strings.expect  strings.json
pesto/test_data/makeOverridable/: test.json
pesto/test_data/types/: many.expect
public/: search.xml
queries/: byQuery.ts  byType.ts  index.ts  lib.ts
salt/: README.md  flake-module.nix
scripts/: flake-module.nix  make-builtins.js  package.json  prepare.js
styles/: globals.css
tests/: .gitignore  data.test.js  jest.config.js  package-lock.json  package.json
types/: basicDataView.ts  nix.ts
user-docs/: example.md
website/: .envrc  .eslintrc.json  .gitignore  default.nix  flake-module.nix  next-sitemap.config.js  next.config.js  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  shell.nix  tsconfig.json
(+190 files in other folders)
