[package]
name = "codemod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.9.5"
rnix = "0.11.0"
rowan = { version = "*" }
textwrap = "0.16.0"
walkdir = "2.4.0"

[dev-dependencies]
expect-test = "1.4.0"
