[package]
name = "codemod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
debug = true

[dependencies]
clap = { version = "4.4.4", features = ["derive"] }
regex = "1.9.5"
rnix = "0.11.0"
rowan = { version = "*" }
serde_json = "1.0.138"
textwrap = "0.16.0"
walkdir = "2.4.0"

[dev-dependencies]
expect-test = "1.4.0"
