[package]
name = "indexer"
version = "0.1.0"
authors = ["Johannes Kirschbauer <hsjobeki@gmail.com>"]
edition = "2021"

[dependencies]
structopt = "0.2"
serde_json = "1.0.89"
serde = { version = "1.0.148", features = ["derive"] }

[dependencies.rnix]
git = "https://gitlab.com/jD91mZM2/rnix.git"
rev = "10b86c94291b4864470158ef8750de85ddd8d4ba"
