[package]
name = "pesto"
description = "Gien a list of positions extract doc-comment into markdown and frontmatter."
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
debug = true

[dependencies]
rnix = "0.11.0"
# version defined by rnix 
rowan = { version = "*" }
regex = "1.10.3"
textwrap = "0.16.0"
walkdir = "2.4.0"
clap = { version = "4.4.18", features = ["derive"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
expect-test = "1.4.1"
serde_with = "3.5.0"
serde_yaml = "0.9.30"
comrak = "0.20.0"


# [dev-dependencies]
