[package]
name = "pesto"
description = "Given a list of positions extract doc-comment into markdown and frontmatter."
version = "0.1.0"
edition = "2021"


[dependencies]
rnix = "0.11.0"
# version defined by rnix
rowan = { version = "0.15" }
regex = "1.9.5"
textwrap = "0.16.0"
walkdir = "2.4.0"
clap = { version = "4.4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
expect-test = "1.4.0"
serde_with = "3.4.0"
serde_yaml = "0.9.27"
comrak = { version = "0.20.0", default-features = false }


# [dev-dependencies]
